--- a/css/main.css
+++ b/css/main.css
@@ -21,14 +21,14 @@ body {
 }
 
 html {
-	/*灰白*/
+	/*灰白
 	-webkit-filter: grayscale(100%);
 	-moz-filter: grayscale(100%);
 	-ms-filter: grayscale(100%);
 	-o-filter: grayscale(100%);
 	filter:progid:DXImageTransform.Microsoft.BasicImage(grayscale=1);
 	_filter:none;
-	/*end */
+	end */
 	
 	font-family: 'Noto-Sans-SC-Bold-2', PingFangSC-Light, Microsoft YaHei UI, Microsoft YaHei, helvetica, sans-serif;
 	font-weight: normal;
